bindlang.grammar

blank  ::= re"\s";
id     ::= re"[a-zA-Z@_$][a-zA-Z@_$0-9]*";
list   ::= "["[expr {blank expr}]"]"
tupple ::= "<"[expr {blank expr}]">"

expr   ::= define|call|atom|func|id;
define ::= id "=" expr;
call   ::= callee "(" [ expr {blank expr} ] ")";
dot    ::= object "." expr
callee ::= id|call
object ::= id|dot
func   ::= "\" [ id {blank id }" ] "->" expr;
atom   ::= number | string | list | tupple;
